--- a/index.html
+++ b/index.html
@@ -2,80 +2,93 @@
 <html lang="pt">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Calculadora de Horas Trabalhadas</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Kit de Utilidades Online</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      max-width: 400px;
-      margin: 40px auto;
+      background: #f1f1f1;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background: #333;
+      color: #fff;
       padding: 20px;
-      background-color: #f7f7f7;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    h2 {
       text-align: center;
     }
-    input, button {
-      width: 100%;
-      padding: 10px;
-      margin-top: 10px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
+    main {
+      max-width: 800px;
+      margin: 40px auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      padding: 0 20px;
     }
-    #resultado {
-      margin-top: 20px;
+    .card {
+      background: #fff;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
       text-align: center;
+      transition: transform 0.2s;
+    }
+    .card:hover {
+      transform: scale(1.03);
+    }
+    .card a {
+      display: block;
+      text-decoration: none;
+      color: #333;
       font-weight: bold;
-      font-size: 1.2em;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9em;
+      color: #777;
     }
   </style>
 </head>
 <body>
-
-  <h2>Calculadora de Horas Trabalhadas</h2>
-
-  <label>Hora de entrada:</label>
-  <input type="time" id="entrada" />
-
-  <label>Hora de saída:</label>
-  <input type="time" id="saida" />
-
-  <label>Pausa (minutos):</label>
-  <input type="number" id="pausa" value="0" />
-
-  <button onclick="calcularHoras()">Calcular</button>
-
-  <div id="resultado"></div>
-
-  <script>
-    function calcularHoras() {
-      const entrada = document.getElementById('entrada').value;
-      const saida = document.getElementById('saida').value;
-      const pausa = parseInt(document.getElementById('pausa').value) || 0;
-
-      if (!entrada || !saida) {
-        document.getElementById('resultado').innerText = 'Por favor preenche todos os campos.';
-        return;
-      }
-
-      const horaEntrada = new Date(`1970-01-01T${entrada}:00`);
-      const horaSaida = new Date(`1970-01-01T${saida}:00`);
-
-      let diffMs = horaSaida - horaEntrada;
-      if (diffMs < 0) {
-        diffMs += 24 * 60 * 60 * 1000; // caso passe da meia-noite
-      }
-
-      const totalMinutos = diffMs / 60000 - pausa;
-      const horas = Math.floor(totalMinutos / 60);
-      const minutos = totalMinutos % 60;
-
-      document.getElementById('resultado').innerText = 
-        `Total: ${horas}h ${minutos}min`;
-    }
-  </script>
-
+  <header>
+    <h1>Kit de Utilidades Online</h1>
+    <p>Ferramentas simples e úteis para o teu dia a dia</p>
+  </header>
+  <main>
+    <div class="card">
+      <a href="horas.html">Calculadora de Horas Trabalhadas</a>
+    </div>
+    <div class="card">
+      <a href="imc.html">Calculadora de IMC</a>
+    </div>
+    <div class="card">
+      <a href="percentagens.html">Calculadora de Percentagens</a>
+    </div>
+    <div class="card">
+      <a href="dias.html">Contador de Dias Entre Datas</a>
+    </div>
+    <div class="card">
+      <a href="combustivel.html">Calculadora de Combustível</a>
+    </div>
+    <div class="card">
+      <a href="moeda.html">Conversor de Moeda</a>
+    </div>
+    <div class="card">
+      <a href="senha.html">Gerador de Senhas Fortes</a>
+    </div>
+    <div class="card">
+      <a href="cronometro.html">Cronómetro Online</a>
+    </div>
+    <div class="card">
+      <a href="lista.html">Gerador de Lista de Compras</a>
+    </div>
+    <div class="card">
+      <a href="contador.html">Contador Regressivo para Eventos</a>
+    </div>
+  </main>
+  <footer>
+    Criado por ti ✨ | Código aberto e simples
+  </footer>
 </body>
 </html>
