--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       --sombra: rgba(0, 0, 0, 0.1);
       --borda-radius: 15px;
       --transicao: 0.3s ease;
+      --bg-dark: #121212;
+      --text-dark: #e0e0e0;
+      --card-dark: #1f1f1f;
+      --shadow-dark: rgba(0, 0, 0, 0.6);
     }
 
     * {
@@ -27,14 +31,26 @@
       min-height: 100vh;
       display: flex;
       flex-direction: column;
+      transition: background-color 0.3s, color 0.3s;
+    }
+
+    body.dark {
+      background: var(--bg-dark);
+      color: var(--text-dark);
     }
 
     header {
       background: var(--cor-primaria);
       color: white;
-      padding: 2rem 1rem;
+      padding: 2rem 1rem 1.8rem;
       text-align: center;
       box-shadow: 0 3px 10px var(--sombra);
+      position: sticky;
+      top: 0;
+      z-index: 100;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
 
     header h1 {
@@ -45,19 +61,42 @@
     }
 
     header p {
-      margin: 0.5rem 0 0;
+      margin: 0.4rem 0 1rem;
       font-weight: 400;
       font-size: 1.1rem;
       opacity: 0.9;
     }
 
+    #toggleDark {
+      background: white;
+      color: var(--cor-primaria);
+      border: none;
+      padding: 8px 14px;
+      font-weight: 600;
+      border-radius: 30px;
+      cursor: pointer;
+      box-shadow: 0 3px 6px var(--sombra);
+      transition: background-color 0.3s, color 0.3s;
+      user-select: none;
+      align-self: flex-end;
+      margin-top: -2.6rem;
+      margin-right: 1rem;
+      font-size: 0.9rem;
+    }
+
+    body.dark #toggleDark {
+      background: var(--cor-primaria);
+      color: white;
+      box-shadow: 0 3px 6px var(--shadow-dark);
+    }
+
     main {
       flex: 1;
       max-width: 960px;
-      margin: 3rem auto 4rem;
+      margin: 2rem auto 4rem;
       padding: 0 1rem;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
       gap: 1.8rem;
     }
 
@@ -73,19 +112,37 @@
       transition: transform var(--transicao), box-shadow var(--transicao);
       cursor: pointer;
       user-select: none;
+      min-height: 170px;
     }
 
-    .card:hover {
+    body.dark .card {
+      background: var(--card-dark);
+      box-shadow: 0 6px 20px var(--shadow-dark);
+    }
+
+    .card:hover,
+    .card:focus-within {
       transform: translateY(-6px);
       box-shadow: 0 10px 25px var(--sombra);
+      outline: none;
+    }
+
+    body.dark .card:hover,
+    body.dark .card:focus-within {
+      box-shadow: 0 12px 30px var(--shadow-dark);
     }
 
     .card svg {
       width: 48px;
       height: 48px;
       fill: var(--cor-primaria);
-      margin-bottom: 0.8rem;
+      margin-bottom: 0.6rem;
       flex-shrink: 0;
+      transition: fill 0.3s;
+    }
+
+    body.dark .card svg {
+      fill: #66aaff;
     }
 
     .card a {
@@ -93,11 +150,95 @@
       color: var(--cor-primaria);
       font-weight: 600;
       font-size: 1.15rem;
+      flex-grow: 0;
+      display: block;
+      margin-bottom: 0.3rem;
+      transition: color 0.3s;
+    }
+
+    body.dark .card a {
+      color: #88bbff;
+    }
+
+    .descricao {
+      font-size: 0.9rem;
+      color: #555;
       flex-grow: 1;
+      margin-top: 0;
+      line-height: 1.3;
+      user-select: none;
+    }
+
+    body.dark .descricao {
+      color: #bbb;
+    }
+
+    #filtro {
+      padding: 12px 16px;
+      width: 100%;
+      max-width: 400px;
+      margin: 20px auto 35px;
+      display: block;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
+      transition: border-color 0.3s;
+    }
+
+    #filtro:focus {
+      outline: none;
+      border-color: var(--cor-primaria);
+      box-shadow: 0 0 6px var(--cor-primaria);
+    }
+
+    body.dark #filtro {
+      background: #222;
+      color: var(--text-dark);
+      border-color: #555;
+    }
+
+    body.dark #filtro:focus {
+      box-shadow: 0 0 6px #66aaff;
+    }
+
+    .categorias {
+      max-width: 960px;
+      margin: 0 auto 1rem;
+      padding: 0 1rem;
       display: flex;
-      align-items: center;
       justify-content: center;
-      height: 100%;
+      gap: 1.2rem;
+      flex-wrap: wrap;
+    }
+
+    .categoria-btn {
+      cursor: pointer;
+      padding: 8px 20px;
+      border-radius: 30px;
+      border: 1.5px solid var(--cor-primaria);
+      background: transparent;
+      color: var(--cor-primaria);
+      font-weight: 600;
+      font-size: 0.95rem;
+      transition: background-color 0.3s, color 0.3s;
+      user-select: none;
+    }
+
+    .categoria-btn.active,
+    .categoria-btn:hover {
+      background-color: var(--cor-primaria);
+      color: white;
+    }
+
+    body.dark .categoria-btn {
+      border-color: #66aaff;
+      color: #66aaff;
+    }
+
+    body.dark .categoria-btn.active,
+    body.dark .categoria-btn:hover {
+      background-color: #66aaff;
+      color: #121212;
     }
 
     footer {
@@ -105,17 +246,79 @@
       padding: 1rem 1rem 2rem;
       font-size: 0.9rem;
       color: #777;
+      user-select: none;
     }
 
-    @media (max-width: 480px) {
-      header h1 {
-        font-size: 1.8rem;
-      }
-      main {
-        grid-template-columns: 1fr 1fr;
-        gap: 1rem;
-      }
+    body.dark footer {
+      color: #aaa;
     }
+
+    h2.seccao {
+      max-width: 960px;
+      margin: 2rem auto 0.8rem;
+      padding: 0 1rem;
+      font-weight: 600;
+      font-size: 1.4rem;
+      color: var(--cor-primaria);
+      user-select: none;
+    }
+
+    body.dark h2.seccao {
+      color: #66aaff;
+    }
+
+    /* Scroll para a última usada */
+    .ultimas {
+      max-width: 960px;
+      margin: 2rem auto 4rem;
+      padding: 0 1rem;
+    }
+
+    .ultimas h3 {
+      margin-bottom: 1rem;
+      font-weight: 600;
+      color: var(--cor-primaria);
+      user-select: none;
+    }
+
+    body.dark .ultimas h3 {
+      color: #66aaff;
+    }
+
+    .ultimas-lista {
+      display: flex;
+      gap: 1rem;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    .ultimas-lista a {
+      background: var(--cor-primaria);
+      color: white;
+      padding: 0.5rem 1rem;
+      border-radius: 25px;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 0.9rem;
+      box-shadow: 0 3px 10px var(--sombra);
+      transition: background-color 0.3s;
+      user-select: none;
+    }
+
+    body.dark .ultimas-lista a {
+      background: #66aaff;
+      box-shadow: 0 3px 10px var(--shadow-dark);
+      color: var(--bg-dark);
+    }
+
+    .ultimas-lista a:hover {
+      background: #357ABD;
+    }
+
+    body.dark .ultimas-lista a:hover {
+      background: #4499ff;
+    }
+
   </style>
 </head>
 <body>
@@ -123,54 +326,183 @@
 <header>
   <h1>Kit de Utilidades Online</h1>
   <p>Ferramentas simples e úteis para o teu dia a dia</p>
+  <button id="toggleDark" aria-label="Alternar modo escuro">Modo Escuro</button>
 </header>
 
-<main>
-  <div class="card" tabindex="0">
+<input type="search" id="filtro" placeholder="Procurar ferramenta..." aria-label="Pesquisar ferramentas" />
+
+<div class="categorias" role="list">
+  <button class="categoria-btn active" data-cat="todos" aria-pressed="true">Todas</button>
+  <button class="categoria-btn" data-cat="calculos" aria-pressed="false">Cálculos</button>
+  <button class="categoria-btn" data-cat="utilidades" aria-pressed="false">Utilidades</button>
+</div>
+
+<main id="main-cards" role="list">
+
+  <article class="card" data-cat="calculos" tabindex="0" role="listitem" data-name="Calculadora de Horas Trabalhadas">
     <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M7 2h10v2H7V2zm-2 5h14v2H5V7zm0 4h14v2H5v-2zm0 4h14v2H5v-2zm0 4h14v2H5v-2z"/></svg>
-    <a href="horas.html">Calculadora de Horas Trabalhadas</a>
-  </div>
-  <div class="card" tabindex="0">
+    <a href="horas.html" tabindex="-1">Calculadora de Horas Trabalhadas</a>
+    <p class="descricao">Calcula as horas totais trabalhadas entre entradas e saídas.</p>
+  </article>
+
+  <article class="card" data-cat="calculos" tabindex="0" role="listitem" data-name="Calculadora de IMC">
     <svg viewBox="0 0 24 24" aria-hidden="true"><circle cx="12" cy="12" r="10" stroke-width="2" fill="none" stroke="currentColor"/><path d="M12 6v6l4 2" stroke-width="2" fill="none" stroke="currentColor"/></svg>
-    <a href="imc.html">Calculadora de IMC</a>
-  </div>
-  <div class="card" tabindex="0">
+    <a href="imc.html" tabindex="-1">Calculadora de IMC</a>
+    <p class="descricao">Calcula o Índice de Massa Corporal e classifica o teu peso.</p>
+  </article>
+
+  <article class="card" data-cat="calculos" tabindex="0" role="listitem" data-name="Calculadora de Percentagens">
     <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M4 6h16v2H4zM4 11h10v2H4zM4 16h16v2H4z"/></svg>
-    <a href="percentagens.html">Calculadora de Percentagens</a>
-  </div>
-  <div class="card" tabindex="0">
+    <a href="percentagens.html" tabindex="-1">Calculadora de Percentagens</a>
+    <p class="descricao">Faz cálculos rápidos de percentagens e aumentos.</p>
+  </article>
+
+  <article class="card" data-cat="calculos" tabindex="0" role="listitem" data-name="Contador de Dias Entre Datas">
     <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M19 3h-1V2h-2v1H8V2H6v1H5c-1.1 0-2 .9-2 2v15c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM5 20V8h14v12H5z"/></svg>
-    <a href="dias.html">Contador de Dias Entre Datas</a>
-  </div>
-  <div class="card" tabindex="0">
+    <a href="dias.html" tabindex="-1">Contador de Dias Entre Datas</a>
+    <p class="descricao">Calcula quantos dias existem entre duas datas escolhidas.</p>
+  </article>
+
+  <article class="card" data-cat="calculos" tabindex="0" role="listitem" data-name="Calculadora de Combustível">
     <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M6 19h12v-2H6v2zm7-7H5v-2h8V6h2v4h3v2h-5z"/></svg>
-    <a href="combustivel.html">Calculadora de Combustível</a>
-  </div>
-  <div class="card" tabindex="0">
+    <a href="combustivel.html" tabindex="-1">Calculadora de Combustível</a>
+    <p class="descricao">Calcula custos e consumos do teu veículo facilmente.</p>
+  </article>
+
+  <article class="card" data-cat="utilidades" tabindex="0" role="listitem" data-name="Conversor de Moeda">
     <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 3v2M5 12H3m18 0h-2M12 19v2M7.07 7.07l-1.41-1.41M18.36 18.36l-1.41-1.41M7.07 16.93l-1.41 1.41M18.36 5.64l-1.41 1.41"/></svg>
-    <a href="moeda.html">Conversor de Moeda</a>
-  </div>
-  <div class="card" tabindex="0">
+    <a href="moeda.html" tabindex="-1">Conversor de Moeda</a>
+    <p class="descricao">Converte EUR e USD de forma simples e rápida.</p>
+  </article>
+
+  <article class="card" data-cat="utilidades" tabindex="0" role="listitem" data-name="Gerador de Senhas Fortes">
     <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2a10 10 0 100 20 10 10 0 000-20zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"/></svg>
-    <a href="senha.html">Gerador de Senhas Fortes</a>
-  </div>
-  <div class="card" tabindex="0">
+    <a href="senha.html" tabindex="-1">Gerador de Senhas Fortes</a>
+    <p class="descricao">Cria senhas complexas para garantir a tua segurança online.</p>
+  </article>
+
+  <article class="card" data-cat="utilidades" tabindex="0" role="listitem" data-name="Cronómetro Online">
     <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M8 5v14l11-7z"/></svg>
-    <a href="cronometro.html">Cronómetro Online</a>
-  </div>
-  <div class="card" tabindex="0">
+    <a href="cronometro.html" tabindex="-1">Cronómetro Online</a>
+    <p class="descricao">Cronómetro simples para controlar o teu tempo com facilidade.</p>
+  </article>
+
+  <article class="card" data-cat="utilidades" tabindex="0" role="listitem" data-name="Gerador de Lista de Compras">
     <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M3 13h2v-2H3v2zm4 0h14v-2H7v2zm0 4h14v-2H7v2zm0-8h14V7H7v2zm-4 8h2v-2H3v2z"/></svg>
-    <a href="lista.html">Gerador de Lista de Compras</a>
-  </div>
-  <div class="card" tabindex="0">
+    <a href="lista.html" tabindex="-1">Gerador de Lista de Compras</a>
+    <p class="descricao">Cria listas rápidas para as tuas compras do dia a dia.</p>
+  </article>
+
+  <article class="card" data-cat="utilidades" tabindex="0" role="listitem" data-name="Contador Regressivo para Eventos">
     <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2a10 10 0 100 20 10 10 0 000-20zm1 15h-2v-6h2v6zm0 4h-2v-2h2v2z"/></svg>
-    <a href="contador.html">Contador Regressivo para Eventos</a>
-  </div>
+    <a href="contador.html" tabindex="-1">Contador Regressivo para Eventos</a>
+    <p class="descricao">Contador regressivo para datas especiais e eventos importantes.</p>
+  </article>
+
 </main>
+
+<section class="ultimas" aria-label="Últimas ferramentas usadas">
+  <h3>Últimas ferramentas usadas</h3>
+  <div class="ultimas-lista" id="ultimas-lista" role="list"></div>
+</section>
 
 <footer>
   Criado por ti ✨ | Código aberto e simples
 </footer>
+
+<script>
+  // Dark mode toggle
+  const toggleBtn = document.getElementById('toggleDark');
+  const body = document.body;
+
+  // Carregar preferencia do localStorage
+  if(localStorage.getItem('modoEscuro') === 'true') {
+    body.classList.add('dark');
+    toggleBtn.textContent = 'Modo Claro';
+  }
+
+  toggleBtn.addEventListener('click', () => {
+    body.classList.toggle('dark');
+    const isDark = body.classList.contains('dark');
+    toggleBtn.textContent = isDark ? 'Modo Claro' : 'Modo Escuro';
+    localStorage.setItem('modoEscuro', isDark);
+  });
+
+  // Filtrar por texto e categoria
+  const filtroInput = document.getElementById('filtro');
+  const cards = document.querySelectorAll('.card');
+  const categoriaBtns = document.querySelectorAll('.categoria-btn');
+
+  let categoriaSelecionada = 'todos';
+
+  filtroInput.addEventListener('input', filtrar);
+  categoriaBtns.forEach(btn => {
+    btn.addEventListener('click', () => {
+      categoriaSelecionada = btn.dataset.cat;
+      categoriaBtns.forEach(b => {
+        b.classList.remove('active');
+        b.setAttribute('aria-pressed', 'false');
+      });
+      btn.classList.add('active');
+      btn.setAttribute('aria-pressed', 'true');
+      filtrar();
+    });
+  });
+
+  function filtrar() {
+    const texto = filtroInput.value.toLowerCase();
+    cards.forEach(card => {
+      const nome = card.dataset.name.toLowerCase();
+      const categoria = card.dataset.cat;
+      const textoValido = nome.includes(texto);
+      const categoriaValida = categoriaSelecionada === 'todos' || categoriaSelecionada === categoria;
+      card.style.display = textoValido && categoriaValida ? 'flex' : 'none';
+    });
+  }
+
+  // Guardar e mostrar últimas ferramentas usadas
+  const ultimasLista = document.getElementById('ultimas-lista');
+
+  function guardarUltimaFerramenta(nome, link) {
+    let ultimas = JSON.parse(localStorage.getItem('ultimasFerramentas') || '[]');
+    // Remover duplicados
+    ultimas = ultimas.filter(f => f.nome !== nome);
+    ultimas.unshift({ nome, link });
+    if (ultimas.length > 5) ultimas.pop();
+    localStorage.setItem('ultimasFerramentas', JSON.stringify(ultimas));
+    mostrarUltimas();
+  }
+
+  function mostrarUltimas() {
+    let ultimas = JSON.parse(localStorage.getItem('ultimasFerramentas') || '[]');
+    ultimasLista.innerHTML = '';
+    if(ultimas.length === 0) {
+      ultimasLista.innerHTML = '<p>Nenhuma ferramenta usada ainda.</p>';
+      return;
+    }
+    ultimas.forEach(f => {
+      const a = document.createElement('a');
+      a.href = f.link;
+      a.textContent = f.nome;
+      a.setAttribute('tabindex', '0');
+      a.addEventListener('click', () => {
+        guardarUltimaFerramenta(f.nome, f.link);
+      });
+      ultimasLista.appendChild(a);
+    });
+  }
+
+  // Adicionar evento click nos links para guardar últimas ferramentas
+  cards.forEach(card => {
+    const a = card.querySelector('a');
+    a.addEventListener('click', () => {
+      guardarUltimaFerramenta(a.textContent, a.href);
+    });
+  });
+
+  // Mostrar inicialmente as últimas usadas
+  mostrarUltimas();
+</script>
 
 </body>
 </html>
